feat: successfully deployed Kibana with Ansible
- Configured Kibana to listen on all interfaces (server.host: "0.0.0.0")
- Verified connectivity on port 5601
- Adjusted Elasticsearch and Kibana SSL settings for compatibility

--- a/roles/elk_server/templates/elasticsearch.yml.j2
+++ b/roles/elk_server/templates/elasticsearch.yml.j2
@@ -95,7 +95,7 @@ xpack.security.enrollment.enabled: true
 
 # Enable encryption for HTTP API client connections, such as Kibana, Logstash, and Agents
 xpack.security.http.ssl:
-  enabled: true
+  enabled: false
   keystore.path: certs/http.p12
 
 # Enable encryption and mutual authentication between cluster nodes
