--- a/roles/elk_server/templates/filebeat.yml.j2
+++ b/roles/elk_server/templates/filebeat.yml.j2
@@ -1,4 +1,7 @@
-
+filebeat.config.modules:
+  path: ${path.config}/modules.d/*.yml
+  reload.enabled: false
+  
 filebeat.modules:
   - module: system
     syslog:
