--- a/roles/beats_agents/templates/filebeat.yml.j2
+++ b/roles/beats_agents/templates/filebeat.yml.j2
@@ -1,3 +1,5 @@
+# ============================== Filebeat Configuration ==============================
+
 filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
   reload.enabled: false
